medialib_headers = [
	'IAlbum.h',
	'IArtist.h',
	'IAudioTrack.h',
	'IBookmark.h',
	'IChapter.h',
	'IFile.h',
	'IGenre.h',
	'ILabel.h',
	'ILogger.h',
	'IMedia.h',
	'IMediaLibrary.h',
	'IMovie.h',
	'IPlaylist.h',
	'IShowEpisode.h',
	'IShow.h',
	'IVideoTrack.h',
	'Types.h',
	'IDeviceLister.h',
	'IFolder.h',
	'IQuery.h',
	'IMetadata.h',
	'ISubtitleTrack.h',
	'IThumbnailer.h',
	'IMediaGroup.h',
]

subdir('filesystem')
subdir('parser')

install_headers(medialib_headers, subdir: 'medialibrary')
